This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
6/17/25: Eliminated checks for unneeded references when acquiring unnormalized
images from DE camera in counting mode (In 4.2).

6/17/25: Fixed repeated output of FEI STEM detector list (In 4.2).

6/11/25: Changed properties sent to DE server when doing dark-corrected only
counting (In 4.2).

6/10/25: Fixed CameraProperties command to give right chip pixel size output
for DE Apollo (In 4.2)

6/10/25: Fixed adjustment in beam shift across an image shift boundary when
changing alpha between low dose areas on a JEOL, and integrated the spot beam
shift during area change with other accumulated incremental changes so it now
has an effect; THIS INVALIDATES INCREMENTAL BEAM SHIFTS IN EXISTING LOW DOSE
SETUPS IF SPOT CHANGES AND THIS CALIBRATION EXISTS (In 4.2).

6/9/25: SEM_4-2-3
6/9/25: Added property MulGridPostLoadDelay to set delay between loading a
grid and reopening gun valve in multigrid routine, and prevented it from
setting a state twice, which can screw up camera parameters (In 4.2).

6/9/25: Made Step to and Adjust IS routine change to a slighty lower intensity
when changing mag to reduce chance of beam getting too small (In 4.2).

6/7/25: Fixed distance measurement in FindAndCenterOneHole and allowed it
to work on already shifted image (In 4.2).

6/6/25: Made JEOL refill errors work the way the help says, not stopping the
script and setting repVal1 (In 4.2).

6/4/25: Changed default back to NOT monitoring C2 aperture on Titan (In 4.2).

6/4/25: Prevented trying to disable electron counting or super-resolution mode
for DE camera that doesn't have counting (In 4.2).

6/4/25: Applied frame size limitation when fitting to polygon only to