@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+6/19/25: Set processing to be at least dark-subtracted for DE counting mode
+and changed setup dialog to hide Unprocessed in counting mode (In 4.2).
+
 6/17/25: Eliminated checks for unneeded references when acquiring unnormalized
 images from DE camera in counting mode (In 4.2).
 
